--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MASTER MD | Session</title>
+    <title>KING RUKI MD | Session</title>
     <meta property="og:image" content="https://i.imgur.com/HQ8CENR.jpeg">
-    <meta property="og:title" content="CYBER MD">
+    <meta property="og:title" content="KING RUKI MD">
 <style>
   body {
    display: flex;
@@ -329,7 +329,7 @@
       <h1 class="h">
         <centre>
         <span>SELECT <span>
-          <span>CYBER <span>
+          <span>RUKI <span>
                 <span>MD <span>
                  <span>INFO<span>
                 </centre>
@@ -337,25 +337,21 @@
       <h3 class="h">
         <span><span>
       </span></span></h3>
-        <input hidden type="text" name="value" value="queen-izumi-md">
+        <input hidden type="text" name="value" value="RUKI MD">
         <br><br>
         <button onclick="location.href='/qr'" class="button">QR CODE</button>
         <br><br>
        <button onclick="location.href='/pair'" class="button">PAIR CODE</button>
         <br><br>
-      <button onclick="location.href='https://heroku.com/deploy?template=https://github.com/MrMasterOfc/MASTER-MD'" class="button">Deploy</button>
+      <button onclick="location.href='https://heroku.com/deploy?template=https://github.com/kingruki/RUKI_MD-v1.0'" class="button">Deploy</button>
         <br><br>
-            <button onclick="location.href='https://wa.me/+94775341543'" class="button">OWNER</button>
-       <br><br>
-       <button onclick="location.href='https://whatsapp.com/channel/0029VailD98GZNCz4zg1Br29'" class="button">WHATSAPP CHANNEL</button>
-         <br><br>
-        <button onclick="location.href='https://github.com/CYBER-MD'" class="button">GITHUB</button>
-       <br><br>
+            <button onclick="location.href='https://wa.me/+94764207978'" class="button">OWNER</button>
+       
     </form>
       <button onclick="location.href='www.youtube.com/@programmercyberayesh'" class="button">YOUTUBE</button>
     </div>
     <footer>
-       <p>© CYBER MD BOT</p>
+       <p>© RUKI MD BOT</p>
     </footer>
   </body>
   </html>
